--- a/ovidentia/skins/ovidentia/ovml/management.html
+++ b/ovidentia/skins/ovidentia/ovml/management.html
@@ -1,3 +1,6 @@
 <h2 class="management-title"><OFTranslate text="Management"></h2>
 
-<OFSitemapMenu sitemap="core">
+<OFSitemapMenu sitemap="core" basenode="babAdmin">
+
+
+<OFSitemapMenu sitemap="core" basenode="babUser">
