--- a/ovidentia/skins/ovidentia/ovml/management.html
+++ b/ovidentia/skins/ovidentia/ovml/management.html
@@ -1,6 +1,87 @@
-<h2 class="management-title"><OFTranslate text="Management"></h2>
+<link rel="stylesheet" href="" />
+<style>
+.sitemap-menu-root{
+	width: 40%;
+	float:left;
+}
+.niv2{
+display: block;
+}
 
+</style>
+<form name="search" onsubmit="return findInPage(this.string.value);">
+	<div align="left">
+		<p style="margin-left:10px;">
+			<input name="string" type="text" size="15" onchange="n = 0;" placeholder="recherche">
+			<input type="submit" value="Search Page">
+		</p>
+	</div>
+</form>
+
+<h2 class="management-title"><OFTranslate text="Management"></h2>
+<div class="icon-left-16 icon-left icon-16x16 playground">
 <OFSitemapMenu sitemap="core" basenode="babAdmin">
 
 
 <OFSitemapMenu sitemap="core" basenode="babUser">
+</div>
+
+<script type="text/javascript">
+
+var n = 0;
+function findInPage(str) {
+    var txt, i, found;
+    if (str == "") {
+        return false; 
+    }
+    // Find next occurance of the given string on the page, wrap around to the
+    // start of the page if necessary.
+    if (window.find) {
+        // Look for match starting at the current point. If not found, rewind
+        // back to the first match.
+        if (!window.find(str)) {
+            while (window.find(str, false, true)) {
+                n++;
+            }
+        } else {
+            n++;
+        }
+        // If not found in either direction, give message.
+        if (n == 0) {
+            alert("Not found.");
+        }
+    } else if (window.document.body.createTextRange) {
+        txt = window.document.body.createTextRange();
+        // Find the nth match from the top of the page.
+        found = true;
+        i = 0;
+        while (found === true && i <= n) {
+            found = txt.findText(str);
+            if (found) {
+                txt.moveStart("character", 1);
+                txt.moveEnd("textedit");
+            }
+            i += 1;
+        }
+        // If found, mark it and scroll it into view.
+        if (found) {
+            txt.moveStart("character", -1);
+            txt.findText(str);
+            txt.select();
+            txt.scrollIntoView();
+            n++;
+        } else {
+            // Otherwise, start over at the top of the page and find first match.
+            if (n > 0) {
+                n = 0;
+                findInPage(str);
+            }
+            // Not found anywhere, give message. else
+            alert("Not found.");
+        }
+    }
+    return false;
+}
+
+
+</script>
